fix spacing on top, under navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,10 @@ p.alert{
   position: fixed;
   z-index: 1;
 }
+
+div.main-body{
+  padding-top: 70px;
+}
 // /* Extra small devices (phones, up to 480px) */
 // @media screen and (max-width: 767px) {
 // }
